[project]
name = "unbiasedgbm"
version = "0.1.0"
description = "repository for Unbiased Gradient Boosting Decision Tree with Unbiased Feature Importance"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "lightgbm==3.3.5",
    "numpy==1.24.3",
    "optuna==2.10.0",
    "pandas==2.0.2",
    "scikit-learn==1.2.2",
]
