[project]
name = "unbiasedgbm"
version = "0.1.0"
description = "repository for Unbiased Gradient Boosting Decision Tree with Unbiased Feature Importance"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy==1.24.3",
    "pandas==2.0.2",
    "scikit-learn==1.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "lightgbm>=3.3.5",
    "matplotlib>=3.10.9",
    "optuna>=2.10.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "tqdm>=4.67.1",
    "xgboost>=3.2.0",
]
